--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -10,44 +10,29 @@ Detailed comments:
 I.
 - What is meant with “data collection changes” and how are they
   responsible for GPU swaps? 
-  * *Don: Data prior to 2014 are not reliable because of two major
-    rework cycles as well as a large amount of experimentation in
-    solving mechanical assembly issues*
+  * *Done: Reworded third paragraph to clarify*
 - Rephrase the sentence: “TBF studies largely how…” -> “TBF studies
   largely show how…”
-  * *George: Done*
+  * *Done*
 
 II.
 - Typo: d0 -> do
-  * *George: Done*
+  * *Done*
 
 III.
 - You should explain in more detail the “double bit error” and “off
   the bus” failure events. 
-  * *Don? GDDR5, #pcie lanes available to card. pcie2!=8 (4, 2)*
+  * *Done: See first paragraph of III*
 - What are the causes for “system boots”? I assume it’s not just event
   failures.
-  * *Don? We rebooted as often as weekly to do software updates
-    patches etc.*
+  * *Done: See second paragraph of III.*
 - What conclusions should one draw from the inter-inventory time shown
   in Fig. 2? I assume there are different reasons for system boots,
   so, I’m not clear how to interpret this graph.
-  * *George: had event dates mixed in before. Also stacking a
-    histogram uner a y axis transform is a "bug" in ggplot2.*
-	*I expected remove dates to reveal inventory frequency but this
-    does not work. Why?*
-	*If a reboot takes about a minute, all insert and remove time
-    stamps should be withi a minute interval. But this is not the case.*
-  
-	*Warm swaps*
-	*Toward the end - daily inventories*
-	*2017 - started daily inventories*
-	*check sqrt axis???*
+  * *Done: See second paragraph of III*
 - Why would you record inventory independently of system boots? I
   assume inventory can only change after a system boot.
-  * *Don: system boots can be far apart while blades with GPUs can be
-    hot-swapped?* 
-	*Also, see above comment.* 
+  * *Done: See second paragraph of III. Warm swaps.*
 
 V.
 - Shouldn’t graphs be separated for the two batches (pre/post the 2017
@@ -57,9 +42,7 @@ V.
   * *Rizwan: split old-new and make MTBF unit years*
 - With respect to failure events, what triggers the retirement or end
   of life of a GPU?
-  * *Don: why is OTB or DBE end of life?*
-  * *First: DBE not end. Losing memory pages 64? Eventually figured
-     that OTB and DBE would not go away*
+  * *See second paragraph of VI*
 - Fig. 10: How big are the partitions with old and new GPUs,
   respectively?
   * *Rizwan: add info to graph*
@@ -67,16 +50,16 @@ V.
 VI.
 - Can you please add references for all analysis methods mentioned in
   this section, e.g. for Kaplan-Meier?
-  * *George: started this task. More is needed.*
+  * *Done.*
 - Can you please explicitly label nodes 0-3 and slots 0-7 in Fig. 4 to
   make it easier for the reader to interpret location-dependent
   results.
-  * *George: Done*
+  * *Done*
 - Fig. 12/13: I assume the figures show the mean and std (or median,
   Q1, Q3)?
-  * *George: they are 95% confidence intervals around the mean on log scale.*
+  * *Done: they are 95% confidence intervals for the mean on log scale.*
 - There is a reference missing on page 9 [?].
-  * *George: added.*
+  * *Done.*
 - Typo: “has mot” -> “has not”
   * *George: Done.*
 
@@ -85,8 +68,7 @@ VII.
   * *Christian: is there a paper reference about this?*
 - Is there any data available on the reliability of other system
   components (CPUs, DRAM, interconnect, etc.)?
-  * *Don: ? Failure rates external to SXM module followed expected
-    MTTF etc.*
+  * *Done: see first paragraph of III. Yes, but not exceptional.*
 
 
 ## Comments for Revision
@@ -99,6 +81,9 @@ VII.
   environmental data available to strengthen this point?
   * *See Reviewer 2 Utilization*
    *See papers by Devesh and by Zimmer.*
+   *Christian: Nie paper? But you observe a lot of
+   variation/dynamics. Our bad resistor "instrument" records an
+   integral/sum behavior*
 
 # Reviewer 2
 
