added missing pdfs

--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -1,3 +1,11 @@
+We thank all the reviewers for their exceptionally helpful and
+thorough comments. Thorough reviews take time and interest! We have
+incorporated suggested changes in our revised version and marked the
+revised text in blue. Here, we respond to reviewers' "Comments for
+Revision" and due to limited space explain mostly only those detailed
+comments that are not marked or incorporated in our revised paper
+version.
+
 # Reviewer 1
 
 ## Detailed Comments for Authors
@@ -75,11 +83,14 @@ VII.
 
 - I suggest showing separate graphs for the old and new GPU batches,
   e.g. in Fig. 2 and Fig. 7. 
-  * *Not relevant to Fig 2. Rizwan: Fig 7*
+  * *Not relevant to Fig 2. Figure 2 speaks to inventory times, which
+    were the same for old and new batches. Rizwan: Fig 7*
 - Your data shows a clear correlation between reliability and
   location. Do you have location-specific operating conditions and
   environmental data available to strengthen this point?
-  * *See Reviewer 2 Utilization*
+  * *We do not have access to additional data to strengthen this point
+   but we improved our Fig. 4, which explains the location-specific
+   physical layout. We also made an additional connection to scheduling*
    *See papers by Devesh and by Zimmer.*
    *Christian: Nie paper? But you observe a lot of
    variation/dynamics. Our bad resistor "instrument" records an
