Added text about monitoring improvements.

--- a/discussion.tex
+++ b/discussion.tex
@@ -96,3 +96,10 @@ to facilitate mitigation for such unexpected reliability threats. System
 acquisition contracts may need to include performance requirements for degraded
 operation, such as a certain percentage of performance capability if the MTBF
 drops by an order of magnitude.
+
+\rev{The experienced reliability issues with Titan had a direct impact on the
+development and deployment of Titan's successor, Summit, and even on Summit's
+successor, Frontier. As a result, more and better monitoring data is already
+collected on Summit. NVIDIA's GPU management and monitoring software has been
+significantly improved. Temperature monitoring has been significantly improved
+as well.}
