I don't think we need an extra conclusion section.

--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -382,7 +382,7 @@ version:
   retrospective, is if the analysis has influenced somehow the current
   and the upcoming (GPU based) systems.
   * *Jim, Don: What are we taking to Summit and Frontier?*
-  * *Christian: add a Conclusions section?*
+  * *Done: Christian: add a Conclusions section?*
 
 
 ## Comments for Revision
