--- a/intro.tex
+++ b/intro.tex
@@ -56,10 +56,11 @@ much of 2017.
 
 Finding the root cause for the 2016 failures took a great deal of
 testing and involvement of materials science and microscopy
-researchers. The failures were traced to a resistor on the GPU
-circuit board (not the GPU chip iself). Throughout this paper, when we
-refer to replacing the GPU, we refer to the entire circuitboard along
-with its GPU chip.
+researchers. The failures were traced to a resistor on the GPU circuit
+board (not the GPU chip iself) \fix{Was anything published about this?
+  If not, we may use \cite{Vargas2009TheCO}}. Throughout this paper,
+  when we refer to replacing the GPU, we refer to the entire
+  circuitboard along with its GPU chip.
 
 Our analysis focuses on GPU boards that were installed in the second
 rework cycle and later, essentially units installed near the beginning
