--- a/refs.bib
+++ b/refs.bib
@@ -406,3 +406,12 @@
   volume={21 1},
   pages={13-15}
 }
+
+@inproceedings{Vargas2009TheCO,
+  title =	 {The corrosion of silver in indoor conditions of an
+                  assembly process in the microelectronics industry},
+  author =	 {Oscar L. Vargas and S. Valdez and Mil{\'e}na Veleva
+                  and K. R. Zlatev and W. Michael Schorr and Gaynor
+                  Juan Manuel Terrazas},
+  year =	 {2009}
+}
