Renamed the Discussion Section to Conclusions.

--- a/discussion.tex
+++ b/discussion.tex
@@ -1,8 +1,8 @@
 % !TEX root = main.tex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Discussion
+% Conclusions
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Discussion}
+\section{\rev{Conclusions}}
 \label{section:discussion}
 
 The experienced unexpected reliability issues with the Titan supercomputer raise
