--- a/refs.bib
+++ b/refs.bib
@@ -222,7 +222,7 @@
   url      = {https://doi.org/10.1093/biostatistics/kxy003}
 }
 
-@INPROCEEDINGS{7056044,
+@INPROCEEDINGS{tiwari15Understand,
   author    = {D. {Tiwari} and S. {Gupta} and J. {Rogers} and D. {Maxwell} and P. {Rech} and S. {Vazhkudai} and D. {Oliveira} and D. {Londo} and N. {DeBardeleben} and P. {Navaux} and L. {Carro} and A. {Bland}}, 
   booktitle = {IEEE 21st International Symposium on High Performance Computer Architecture (HPCA) 2015}, 
   title     = {Understanding {GPU} errors on large-scale {HPC} systems and the implications for system design and operation},
@@ -300,13 +300,15 @@
   url       = {https://doi.org/10.1145/2807591.2807666}
 }
 
-@inproceedings{osti_1086655,
-  author    = {Ezell, Matthew A},
-  title     = {Understanding the Impact of Interconnect Failures on System Operation},
-  booktitle = {Proceedings of the Cray User Group Conference (CUG) 2013},
-  year      = {2013},
-  month     = may # "~6-9, ",
-  address   = {Napa Valley, CA, USA}
+@inproceedings{ezell2013,
+  author =	 {Ezell, Matthew A},
+  title =	 {Understanding the Impact of Interconnect Failures on
+                  System Operation},
+  booktitle =	 {Proceedings of the Cray User Group Conference (CUG)
+                  2013},
+  year =	 {2013},
+  month =	 may # "~6-9, ",
+  address =	 {Napa Valley, CA, USA}
 }
 
 @INPROCEEDINGS{7446091,
