--- a/related.tex
+++ b/related.tex
@@ -7,9 +7,9 @@
 
 Being the largest machine with the most GPUs in the world attracts a lot of attention so particularly during Titan's first few years of operation, many studies were published about different aspects of its reliability. However, none of the studies investigate the atypical failure mode discussed in this paper nor do they consider data over the full lifetime of the system through its decomissioning.
 
-Tiwari et al~\cite{Tiwari15Experience,7056044} analyze types of GPU errors on Titan and on a GPU cluster at Los Alamos National Laboratory. This also includes neutron beam experiments at the Los Alamos Neutron Science Center and at Rutherford Appleton Laboratories to further understand GPU soft errors caused by neutron radiation triggered upsets (bit flips and timing errors).
+Tiwari et al.~\cite{Tiwari15Experience,tiwari15Understand} analyze types of GPU errors on Titan and on a GPU cluster at Los Alamos National Laboratory. This also includes neutron beam experiments at the Los Alamos Neutron Science Center and at Rutherford Appleton Laboratories to further understand GPU soft errors caused by neutron radiation triggered upsets (bit flips and timing errors).
 %
-Tiwari et al~\cite{10.1145/2807591.2807666} further analyze types of GPU errors on Titan, including software/firmware related errors and failures, ECC double-bit errors, and GPU ``off the bus'' and ECC page retirement events. This work observes an ECC double-bit mean-time between errors (MTBE) of about 160 hours, or about one per week, with 86\% occurring in GPU memory and the rest in the GPU register file. The GPU ``off the bus'' events were caused by a system integration issue that was fixed and not an inherent GPU or GPU memory architecture flaw.
+Tiwari et al.~\cite{10.1145/2807591.2807666} further analyze types of GPU errors on Titan, including software/firmware related errors and failures, ECC double-bit errors, and GPU ``off the bus'' and ECC page retirement events. This work observes an ECC double-bit mean-time between errors (MTBE) of about 160 hours, or about one per week, with 86\% occurring in GPU memory and the rest in the GPU register file. The GPU ``off the bus'' events were caused by a system integration issue that was fixed and not an inherent GPU or GPU memory architecture flaw.
 %
 Nie et al.~\cite{7446091,nie17characterizing,nie18machine} characterize the soft error behavior of Titan's GPUs in relation to temperature and power consumption to predict their increased occurrence by correlating data in temporal and spatial domains and using machine learning models. The work primarily focuses on correctable single-bit errors.
 %
