--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -1,10 +1,3 @@
-We thank all the reviewers for their exceptionally helpful and
-thorough comments. Thorough reviews take time and interest! We have
-incorporated suggested changes in our revised version and marked the
-revised text in blue. Here, we respond to reviewers' "Comments for
-Revision" and due to limited space explain mostly only those detailed
-comments that are not marked or incorporated in our revised paper
-version.
 
 # Reviewer 1
 
@@ -88,13 +81,7 @@ VII.
 - Your data shows a clear correlation between reliability and
   location. Do you have location-specific operating conditions and
   environmental data available to strengthen this point?
-  * *We do not have access to additional data to strengthen this point
-   but we improved our Fig. 4, which explains the location-specific
-   physical layout. We also made an additional connection to scheduling*
-   *See papers by Devesh and by Zimmer.*
-   *Christian: Nie paper? But you observe a lot of
-   variation/dynamics. Our bad resistor "instrument" records an
-   integral/sum behavior*
+  * *Done: see sentence starting with "An increasing temoerature ...*
 
 # Reviewer 2
 
@@ -112,43 +99,46 @@ authors drew particular conclusions in this paper.
 - Section 3: are DBE and OTB the only failures events logged? Are
   there no other failure modes of relevance oradditional conditions
   that may have triggered a replacement?
-  * *Don: Other failures were much less frequent and were not
-    correlated with the failing resistor issue, which was the driving
-    cause of GPU board replacement.*
+  * *Done: see first paragraph of III*
 - Fig. 2: a square root scale is hard to parse and having the lowest
   y-axis mark at 500 isn't particularly useful. It would help to add
   further tick marks.
-  * *George: See Reviewer 1 on Fig 2*
+  * *Removed square root scale.*
+    *In addition the graph was using the wrong subset of data, which
+    is now corrected.* 
 - Fig. 2: based on the text, the weekly inventory condition should
   appear on this graph for later years; however, this does not appear
   to be the case (i.e., around the 7 day mark, only years before 2015
   seem to appear). If system boots were rare in the latter years,
   which necessitated this weekly inventory, the chart is not
   reflecting this reality. It would be helpful to clarify.
-  * *George: See Reviewer 1 on Fig 2*
+  * *The weekly reboots were implemented at some point in 2016 after
+	realizing the sparsity of the earlier data.* 
+	*However reboots due to
+    failures started to increase about the same time, making this addition
+    moot.*
 - Section 4: it would be helpful to explain the reason for overlapping
   logs (GPU life and location). Is this due to some logging
   peculiarity?
-  * *George: See Reviewer 1 on Fig 2*
+  * *Overlapping GPU life can occur due to incomplete inventory*
 - Section 6: how was the conclusion that GPU lifetimes were
   correlating to the cooling architecture reached? Was this validated
   against some other logs (e.g., temperature or chiller performance
   logs)?
-  * *George: Improved Figure 4.*
-  *See papers by Devesh and by Zimmer.*
+  * *Improved Figure 4. Also, found temperature confirmation.*
 - It would be helpful to correlate lifetime data against any
   utilization or scheduler logs as well. It is unclear if GPU
   utilization was uniform (which the text seems to indicate was not
   the case due to the adaptive scheduler). Unexpected job
   scheduling/mapping could also contribute to peculiarities in the
   data. It would be helpful to rule out this scenario as an effect.
-  * *Utilization:*
+  * *We did find that scheduling contributed to the patterns*
   *Interleaving hazard values correlate with small job scheduling fill and
-  toroidal folding. George: Get the details to work out.*
+  toroidal folding.*
 - While overall readability was not substantially impacted, it would
   be helpful to address the various minor grammatical issues (mostly
   centered around the first 2-3 pages).
-  * *George: Some done and continuing.*
+  * *Some done and continuing.*
 
 ## Comments for Revision
 
@@ -158,7 +148,8 @@ authors drew particular conclusions in this paper.
   validation or confirmation via additional logs or analysis would be
   helpful. Additionally, it would be helpful to rule out other
   contributing factors such as poor scheduling or utilization.
-  * *See Utilization above*
+  * *We have added temperature data confirmation reported in another
+    study as well as contributing scheduling confirmation.*
 
 # Reviewer 3
 
@@ -205,8 +196,8 @@ authors drew particular conclusions in this paper.
   Operations team and the vendors. Same thing with the 0-10 column
   zig-zag pattern. Any data from internal counters that would be
   useful to discard or confirm hypothesis?
-  * *George: follow up zig-zag with toroidal foldover*
-    *See if it persists for subsets of year or subsets of cages.*
+  * *George: zig-zag fits toroidal foldover and is explainable with
+    scheduling*
 
 ### Figures: 
 
