--- a/code/TitanGPUmodel.Rmd
+++ b/code/TitanGPUmodel.Rmd
@@ -8,8 +8,10 @@ output:
 ---
 ```{r setup, include=FALSE}
 options(repos = c(CRAN = "http://cran.rstudio.com")) # set CRAN mirror
-install.packages("remotes")
-remotes::install_github("NikNakk/forestmodel") # only package from GitHub
+installed = installed.packages()
+if(! "remotes" %in% installed) install.packages("remotes")
+if(! ("forestmodel" %in% installed && packageVersion("forestmodel") >= "0.6.1"))
+  remotes::install_github("NikNakk/forestmodel") # only package from GitHub
 ## all other packages will prompt to install from CRAN
 
 out_dir = "../figs/" # paper related figures will go here
