--- a/related.tex
+++ b/related.tex
@@ -17,7 +17,7 @@ Tiwari et al. and Nie et al. do not address the atypical failure mode discussed 
 
 Zimmer et al.~\cite{8665764} develop a new job scheduling strategy for Titan to counter the GPU failures that we discuss and to improve system utilization and productivity. The solution uses reordering of the compute nodes for resource allocation, scheduling larger jobs on more reliable and smaller jobs on less reliable nodes.
 
-Ezell~\cite{osti_1086655} creates a general understanding of Titan's interconnect failures using an application to stress test Titan's Gemini interconnect.
+Ezell~\cite{ezell2013} creates a general understanding of Titan's interconnect failures using an application to stress test Titan's Gemini interconnect.
 %
 The work by Kumar et al.~\cite{kumar18understanding} analyzes Titan's interconnect faults, errors and congestion events to improve resilience of the interconnects and congestion resolution methods. The results show that the magnitude of interconnect errors is very high with an uneven distribution across different types of links. They also show that congestion is very frequent and bursty.
 %
